--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,24 @@
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=project
 DB_USERNAME=robison
-DB_PASSWORD="fasdf3#asdf"
-
+DB_PASSWORD="secret"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
-
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+
+NGINX_PORT=8081
+MYSQL_PORT=3301
+MAIL1_PORT=1025
+MAIL2_PORT=8025
+PHPMYADMIN_PORT=8881
