--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         restart: unless-stopped
         working_dir: /var/www/
         volumes:
-            - ./:/var/www
+            - ./../:/var/www
         depends_on:
             - redis
             - queue
@@ -24,9 +24,9 @@ services:
         image: nginx:alpine
         restart: unless-stopped
         ports:
-            - 8080:80
+            - ${NGINX_PORT}:80
         volumes:
-            - ./:/var/www
+            - ./../:/var/www
             - ./docker/nginx/:/etc/nginx/conf.d/
         networks:
             - laravel_networks
@@ -43,7 +43,41 @@ services:
         volumes:
             - ./.docker/mysql/dbdata:/var/lib/mysql
         ports:
-            - 3307:3306
+            - ${MYSQL_PORT}:3306
+        networks:
+            - laravel_networks
+
+    #phpMyadmin
+    phpMyadmin:
+        image: phpmyadmin/phpmyadmin
+        restart: unless-stopped
+        ports:
+            - ${PHPMYADMIN_PORT}:80
+        environment:
+            PMA_HOST: mysql
+            PMA_USER: ${DB_USERNAME}
+            PMA_PASSWORD: ${DB_PASSWORD}
+        depends_on:
+            - mysql
+        networks:
+            - laravel_networks
+
+    #mailhog
+    mailhog:
+        image: mailhog/mailhog:latest
+        restart: unless-stopped
+        ports:
+            - ${MAIL1_PORT}:1025
+            - ${MAIL2_PORT}:8025
+        networks:
+            - laravel_networks
+
+    #redis
+    redis:
+        image: redis:latest
+        restart: unless-stopped
+        ports:
+            - ${REDIS_PORT}:6379
         networks:
             - laravel_networks
 
@@ -58,31 +92,9 @@ services:
         restart: unless-stopped
         command: "php artisan queue:work"
         volumes:
-            - ./:/var/www
+            - ./../:/var/www
         depends_on:
             - redis
-        networks:
-            - laravel_networks
-    
-    #phpMyadmin
-    phpMyadmin:
-        image: phpmyadmin/phpmyadmin
-        restart: unless-stopped
-        ports:
-            - "8081:80"
-        environment:
-            PMA_HOST: mysql
-            PMA_USER: ${DB_USERNAME}
-            PMA_PASSWORD: ${DB_PASSWORD}
-        depends_on:
-            - mysql
-        networks:
-            - laravel_networks
-    
-    #redis
-    redis:
-        image: redis:latest
-        restart: unless-stopped
         networks:
             - laravel_networks
 
