--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
             PMA_HOST: mysql
             PMA_USER: ${DB_USERNAME}
             PMA_PASSWORD: ${DB_PASSWORD}
+            UPLOAD_LIMIT: 300M
         depends_on:
             - mysql
         networks:
