--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         networks:
             - laravel_networks
 
-    # nginx
+    #nGinx
     nginx:
         image: nginx:alpine
         restart: unless-stopped
@@ -27,11 +27,11 @@ services:
             - ${NGINX_PORT}:80
         volumes:
             - ./../:/var/www
-            - ./docker/nginx/:/etc/nginx/conf.d/
+            - ./nginx/:/etc/nginx/conf.d/
         networks:
             - laravel_networks
 
-    # mysql
+    #MySQL
     mysql:
         image: mysql:latest
         restart: unless-stopped
@@ -63,7 +63,7 @@ services:
         networks:
             - laravel_networks
 
-    #mailhog
+    #MailHog
     mailhog:
         image: mailhog/mailhog:latest
         restart: unless-stopped
@@ -73,7 +73,7 @@ services:
         networks:
             - laravel_networks
 
-    #redis
+    #Redis
     redis:
         image: redis:latest
         restart: unless-stopped
@@ -82,7 +82,7 @@ services:
         networks:
             - laravel_networks
 
-    # queue
+    #Queue
     queue:
         build:
             args:
@@ -98,6 +98,15 @@ services:
             - redis
         networks:
             - laravel_networks
+
+    #Memcached
+    memcached:
+        image: 'memcached:alpine'
+        ports:
+        - '11211:11211'
+        networks:
+            - laravel_networks
+
 
 networks:
     laravel_networks:
