--- a/nginx/laravel.conf
+++ b/nginx/laravel.conf
@@ -1,7 +1,24 @@
 server {
-    listen 80;
+    listen 81 ssl;
     index index.php;
     root /var/www/public;
+
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    ssl_protocols TLSv1.2;
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+
+    error_page 497 @force_https;
+
+    charset utf-8;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
+    }
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -13,9 +30,12 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
+    location ~ /\.(?!well-known).* {
+        deny all;
+    }
+
+    location @force_https{
+        return 301 'https://$host:$server_port$request_uri';
     }
 
     error_log  /var/log/nginx/error.log;
